--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
 
 			// Function to handle authentication response
 			function handleCredentialResponse(response) {
-				console.log("Credential handled");
+				console.log('Initialization response:', response);
 			  if (response.credential) {
 			    var credential = response.credential;
 			    var accessToken = credential.id_token;
