--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
 			};
 
 			// Function to handle authentication response
-			function handleCredentialResponse(response) {
+			function handleCredentialResponse() {
 				console.log('Initialization response:', response);
 			  if (response.credential) {
 			    var credential = response.credential;
