--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 		<script src="https://apis.google.com/js/api.js"></script>
-		<script src="https://accounts.google.com/gsi/client" async defer></script>
+		<script src="https://apis.google.com/js/platform.js" async defer></script>
+
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
@@ -1015,17 +1016,16 @@
 			}
 		</script>
 		<script>
-						// Load the API client and authenticate with OAuth
-			gapi.load('client', initClient);
+					// Load the API client and authenticate with GSI
+			gapi.load('client:auth2', initClient);
 
 			function initClient() {
-			  gapi.client.init({
-			    clientId: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com', // Your actual OAuth client ID
-			    discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+			  gapi.auth2.init({
+			    client_id: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com', // Your actual OAuth client ID
 			    scope: 'https://www.googleapis.com/auth/spreadsheets',
 			  }).then(() => {
 			    // API is ready
-			    console.log('Google Sheets API initialized with OAuth');
+			    console.log('Google Sheets API initialized with GSI');
 			  });
 			}
 		</script>
