--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 		<script src="https://apis.google.com/js/api.js"></script>
-		<script src="https://apis.google.com/js/platform.js" async defer></script>
+		<script src="https://accounts.google.com/gsi/client" async defer></script>
 
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
@@ -1016,18 +1016,54 @@
 			}
 		</script>
 		<script>
-					// Load the API client and authenticate with GSI
-			gapi.load('client:auth2', initClient);
+			function writeToGoogleSheet(location, latitude) {
+			  // Your Google Sheets API endpoint
+			  const endpoint = 'https://sheets.googleapis.com/v4/spreadsheets/1FC7ZTfggoxfqSstoAyaqjP0r1LyPKr44HxTn7VqpN7o/values/Sheet1!A2:A3:append';
 
-			function initClient() {
-			  gapi.auth2.init({
-			    client_id: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com', // Your actual OAuth client ID
-			    scope: 'https://www.googleapis.com/auth/spreadsheets',
-			  }).then(() => {
-			    // API is ready
-			    console.log('Google Sheets API initialized with GSI');
-			  });
+			  // Your API key
+			  const apiKey = 'AIzaSyBIlIb5HqcM1fBW0e6QE9FD4IPs9SHBurw';
+
+			  // Data to be written to the spreadsheet
+			  const data = {
+			    values: [
+			      [location],
+			      [latitude]
+			    ]
+			  };
+
+			  // Construct the request
+			  const requestOptions = {
+			    method: 'POST',
+			    headers: {
+			      'Content-Type': 'application/json',
+			      'Authorization': `Bearer ${apiKey}`
+			    },
+			    body: JSON.stringify(data)
+			  };
+
+			  // Send the request
+			  return fetch(endpoint, requestOptions)
+			    .then(response => response.json())
+			    .then(result => {
+			      console.log('Data written successfully:', result);
+			      return result;
+			    })
+			    .catch(error => {
+			      console.error('Error writing data:', error);
+			      throw error;
+			    });
 			}
+
+			// Example usage:
+			const location = 'New York';
+			const latitude = 40.7128;
+			writeToGoogleSheet(location, latitude)
+			  .then(() => {
+			    console.log('Data successfully written to Google Sheet');
+			  })
+			  .catch(error => {
+			    console.error('Failed to write data to Google Sheet:', error);
+			  });
 		</script>
 	</body>
 </html>
