--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
 						function updateGoogleSheetEverySecond() {
 
 			  // Call writeToGoogleSheet function to update Google Sheet
-			  writeToGoogleSheet(longitud, latitude)
+			  writeToGoogleSheet(longitude, latitude)
 			    .then(() => {
 			      console.log('Data successfully written to Google Sheet');
 			    })
