--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
 			}
 		</script>
 		<script>
-									const { google } = require('googleapis');
+			//const { google } = require('googleapis');
 
 			// Load the service account key JSON file
 			const serviceAccountKey = require('credentials.json');
