--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
-		<script src="https://apis.google.com/js/api.js"></script>
-		<script src="https://accounts.google.com/gsi/client" async defer></script>
+		<script src="https://www.gstatic.com/firebasejs/9.4.0/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.4.0/firebase-database.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
@@ -1015,6 +1015,6 @@
 				backgroundColors[7] = color(0, 0, 0, 100); // 60% black
 			}
 		</script>
-		<script></script>
+		<script src="sync_data.js"></script>
 	</body>
 </html>
