--- a/index.html
+++ b/index.html
@@ -1014,12 +1014,11 @@
 			}
 		</script>
 
-
-<script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js'
-	import  {getDatabase } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
-  </script>
-		<script></script>
+		<script type="module">
+			   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js'
+			import  {getDatabase } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
+		</script>
+		<script>
 			// Your Firebase configuration
 			const firebaseConfig = {
 			  apiKey: "YOUR_API_KEY",
