--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
 
 		<script type="module">
 			import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js'
-			import  {database } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
+			import  { getDatabase } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
 		</script>
 		<script>
 			// Your Firebase configuration
