--- a/index.html
+++ b/index.html
@@ -1019,29 +1019,29 @@
 			import  { getDatabase } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
 		</script>
 		<script>
-			// Your Firebase configuration
-			const firebaseConfig = {
-			  apiKey: "YOUR_API_KEY",
-			  authDomain: "YOUR_AUTH_DOMAIN",
-			  databaseURL: "YOUR_DATABASE_URL",
-			  projectId: "YOUR_PROJECT_ID",
-			  storageBucket: "YOUR_STORAGE_BUCKET",
-			  messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-			  appId: "YOUR_APP_ID"
-			};
+						// Your Firebase configuration
+						const firebaseConfig = {
+						  apiKey: "YOUR_API_KEY",
+						  authDomain: "YOUR_AUTH_DOMAIN",
+						  databaseURL: "YOUR_DATABASE_URL",
+						  projectId: "YOUR_PROJECT_ID",
+						  storageBucket: "YOUR_STORAGE_BUCKET",
+						  messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+						  appId: "YOUR_APP_ID"
+						};
 
-			// Initialize Firebase
-			firebase.initializeApp(firebaseConfig);
+						    // Initialize Firebase
+							const app = initializeApp(firebaseConfig);
 
 			// Reference to your Firebase Realtime Database
-			const database = firebase.database();
+			const database = getDatabase(app);
 
 			// Variables to be written
 			const variable_a = "value_a";
 			const variable_b = "value_b";
 
 			// Write variables to the database
-			database.ref('variables').set({
+			set(ref(database, 'variables'), {
 			  variable_a: variable_a,
 			  variable_b: variable_b
 			}).then(() => {
