--- a/index.html
+++ b/index.html
@@ -1020,13 +1020,13 @@
 
 			// Your Firebase configuration
 			const firebaseConfig = {
-				apiKey: "YOUR_API_KEY",
-				authDomain: "YOUR_AUTH_DOMAIN",
-				databaseURL: "YOUR_DATABASE_URL",
-				projectId: "YOUR_PROJECT_ID",
-				storageBucket: "YOUR_STORAGE_BUCKET",
-				messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-				appId: "YOUR_APP_ID"
+				apiKey: "AIzaSyDWeHUOXcHSp01pLYXY8HQm-l8e7ldqeRA",
+				authDomain: "searchingforus.firebaseapp.com",
+				databaseURL: "https://searchingforus-default-rtdb.europe-west1.firebasedatabase.app",
+				projectId: "searchingforus",
+				storageBucket: "searchingforus.appspot.com",
+				messagingSenderId: "1074186074798",
+				appId: "1:1074186074798:web:316b5662099ab3b0e48b3f"
 			};
 
 			// Initialize Firebase
