--- a/index.html
+++ b/index.html
@@ -1035,14 +1035,11 @@
 			// Reference to your Firebase Realtime Database
 			const database = getDatabase(app);
 
-			// Variables to be written
-			const hachi_latitude = latitude;
-			const hachi_longitude = longitude;
-
 			// Write variables to the database
 			set(ref(database, 'hachi_data'), {
-				hachi_latitude: hachi_latitude,
-				hachi_longitude: hachi_longitude
+				hachi_latitude: latitude,
+				hachi_longitude: longitude,
+				hachi_checkpoint: checkpoint.text;
 			}).then(() => {
 				console.log("Variables written to the database successfully!");
 			}).catch((error) => {
