--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
 			set(ref(database, 'hachi_data'), {
 				hachi_latitude: latitude,
 				hachi_longitude: longitude,
-				hachi_checkpoint: checkpoint.text;
+				hachi_checkpoint: checkpoint.text
 			}).then(() => {
 				console.log("Variables written to the database successfully!");
 			}).catch((error) => {
