--- a/index.html
+++ b/index.html
@@ -1036,12 +1036,15 @@
 
 			// Reference to your Firebase Realtime Database
 			const database = getDatabase(app);
+			const hachi_latitude = latitude;
+			 		const hachi_longitude = longitude;
+			const hachi_checkpoint = currentCheckpoint;
 
 			// Write variables to the database
 			set(ref(database, 'hachi_data'), {
-				hachi_latitude: latitude,
-				hachi_longitude: longitude,
-				hachi_checkpoint: currentCheckpoint
+				hachi_latitude: hachi_latitude,
+				hachi_longitude: hachi_longitude,
+				hachi_checkpoint: hachi_checkpoint
 			}).then(() => {
 				console.log("Variables written to the database successfully!");
 			}).catch((error) => {
