--- a/index.html
+++ b/index.html
@@ -1043,11 +1043,16 @@
 			         // Determine the database name based on the deviceName
 			         const databaseName = (deviceName === 'hachi_BT') ? 'hachi_data' : 'avatar_data';
 
+			         // Determine the variable names based on the deviceName
+			         const latitudeVar = (deviceName === 'hachi_BT') ? 'hachi_latitude' : 'avatar_latitude';
+			         const longitudeVar = (deviceName === 'hachi_BT') ? 'hachi_longitude' : 'avatar_longitude';
+			         const checkpointVar = (deviceName === 'hachi_BT') ? 'hachi_checkpoint' : 'avatar_checkpoint';
+
 			         // Write variables to the database
 			         set(ref(database, databaseName), {
-			             hachi_latitude: latitude,
-			             hachi_longitude: longitude,
-			             hachi_checkpoint: currentCheckpoint
+			             [latitudeVar]: latitude,
+			             [longitudeVar]: longitude,
+			             [checkpointVar]: currentCheckpoint
 			         }).then(() => {
 			             console.log("Variables written to the database successfully!");
 			         }).catch((error) => {
