--- a/index.html
+++ b/index.html
@@ -1017,27 +1017,27 @@
 		</script>
 
 		<script type="module">
-				import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js'
-				import  { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
+			import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js'
+			import  { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
 
-				// Your Firebase configuration
-				const firebaseConfig = {
-					apiKey: "AIzaSyDWeHUOXcHSp01pLYXY8HQm-l8e7ldqeRA",
-					authDomain: "searchingforus.firebaseapp.com",
-					databaseURL: "https://searchingforus-default-rtdb.europe-west1.firebasedatabase.app",
-					projectId: "searchingforus",
-					storageBucket: "searchingforus.appspot.com",
-					messagingSenderId: "1074186074798",
-					appId: "1:1074186074798:web:316b5662099ab3b0e48b3f"
-				};
+			// Your Firebase configuration
+			const firebaseConfig = {
+				apiKey: "AIzaSyDWeHUOXcHSp01pLYXY8HQm-l8e7ldqeRA",
+				authDomain: "searchingforus.firebaseapp.com",
+				databaseURL: "https://searchingforus-default-rtdb.europe-west1.firebasedatabase.app",
+				projectId: "searchingforus",
+				storageBucket: "searchingforus.appspot.com",
+				messagingSenderId: "1074186074798",
+				appId: "1:1074186074798:web:316b5662099ab3b0e48b3f"
+			};
 
-				// Initialize Firebase
-				const app = initializeApp(firebaseConfig);
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig);
 
-				// Reference to your Firebase Realtime Database
-				const database = getDatabase(app);
+			// Reference to your Firebase Realtime Database
+			const database = getDatabase(app);
 
-				function writeToDatabase() {
+			function writeToDatabase() {
 			    // Check if variables are not null or empty
 			    if (latitude && longitude && currentCheckpoint) {
 			        // Determine the database name based on the deviceName
@@ -1062,8 +1062,8 @@
 			            const otherLongitudeVar = (deviceName === 'hachi_BT') ? 'hachi_longitude' : 'avatar_longitude';
 			            const otherCheckpointVar = (deviceName === 'hachi_BT') ? 'hachi_checkpoint' : 'avatar_checkpoint';
 
-			            // Read variables from the other database
-			            onValue(ref(database, otherDatabaseName)).then((snapshot) => {
+			            // Subscribe to real-time updates for variables from the other database
+			            onValue(ref(database, otherDatabaseName), (snapshot) => {
 			                const otherData = snapshot.val();
 			                if (otherData) {
 			                    other_latitude = otherData[otherLatitudeVar];
@@ -1076,8 +1076,8 @@
 			                } else {
 			                    console.log("No data found in the other database.");
 			                }
-			            }).catch((error) => {
-			                console.error("Error reading variables from the other database:", error);
+			            }, {
+			                onlyOnce: true // Fetch the data only once to avoid continuous updates
 			            });
 
 			        }).catch((error) => {
@@ -1088,9 +1088,8 @@
 			    }
 			}
 
-
-			// Call the function to write variables to the database every 2 seconds
-			setInterval(writeToDatabase, 2000);
+						// Call the function to write variables to the database every 2 seconds
+						setInterval(writeToDatabase, 2000);
 		</script>
 	</body>
 </html>
