--- a/index.html
+++ b/index.html
@@ -1091,8 +1091,8 @@
 				});
 			}
 			// Call the function to write variables to the database every 2 seconds
-			setInterval(writeToDatabase, 2000);
-			//xsetInterval(readFromDatabase, 2000);
+			//setInterval(writeToDatabase, 2000);
+			setInterval(readFromDatabase, 2000);
 		</script>
 	</body>
 </html>
