--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
 
 		<script type="module">
 			import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js'
-			import  { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
+			import  { getDatabase, ref, set, onValue } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
 
 			// Your Firebase configuration
 			const firebaseConfig = {
