--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,10 @@
 			    }
 			}
 
+			var other_latitude=null;
+			var other_longitude=null;
+			var other_checkpoint=null;
+
 			// Function to read data from the database
 			function readFromDatabase(deviceName) {
 				// Read from the other database based on deviceName
