--- a/index.html
+++ b/index.html
@@ -1092,9 +1092,10 @@
 					}
 				});
 			}
-			// Call the function to write variables to the database every 2 seconds
-			//setInterval(writeToDatabase, 2000);
-			setInterval(readFromDatabase, 2000);
+			setInterval(() => {
+				writeToDatabase();
+				readFromDatabase(); // Read data after writing
+			}, 2000);
 		</script>
 	</body>
 </html>
