--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
 			var latitude;
 			var longitude;
 			let speed;
+			var distEachOther = null;
+
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
 					const options = {
@@ -277,6 +279,7 @@
 								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
 								"<strong> Longitude:</strong> " + longitude + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>pets</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance:</strong> " + distEachOther +" m" +
 								" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
@@ -1083,6 +1086,7 @@
 						other_latitude = otherData[otherLatitudeVar];
 						other_longitude = otherData[otherLongitudeVar];
 						other_checkpoint = otherData[otherCheckpointVar];
+						distEachOther = calculateDistance(latitude, longitude, other_latitude, other_longitude);
 						console.log("Variables read from the other database successfully!");
 						console.log("other_latitude:", other_latitude);
 						console.log("other_longitude:", other_longitude);
