--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
 								"<strong> Longitude:</strong> " + longitude + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>pets</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance:</strong> " + distEachOther.toFixed(2) +" m" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>sound_detection_dog_barking</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance:</strong> " + distEachOther.toFixed(2) +" m" +
 								" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
@@ -1072,15 +1072,15 @@
 			                [longitudeVar]: longitude,
 			                [checkpointVar]: currentCheckpoint
 			            }).then(() => {
-			                console.log("Variables written to the database successfully!");
+			                //console.log("Variables written to the database successfully!");
 			            }).catch((error) => {
 			                console.error("Error writing variables to the database:", error);
 			            });
 			        } else {
-			            console.log("Variables have not changed since the last write operation. Data not written to the database.");
+			            console.log("Variables have not changed. Data not written to the database.");
 			        }
 			    } else {
-			        console.log("One or more variables are null or empty. Data not written to the database.");
+			        //console.log("One or more variables are null or empty. Data not written to the database.");
 			    }
 			}
 
@@ -1104,10 +1104,7 @@
 						other_longitude = otherData[otherLongitudeVar];
 						other_checkpoint = otherData[otherCheckpointVar];
 						distEachOther = calculateDistance(latitude, longitude, other_latitude, other_longitude);
-						console.log("Variables read from the other database successfully!");
-						console.log("other_latitude:", other_latitude);
-						console.log("other_longitude:", other_longitude);
-						console.log("other_checkpoint:", other_checkpoint);
+						//console.log("Variables read from the other database successfully!");
 					} else {
 						console.log("No data found in the other database.");
 					}
