--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
 			                console.error("Error writing variables to the database:", error);
 			            });
 			        } else {
-			            console.log("Variables have not changed. Data not written to the database.");
+			            //console.log("Variables have not changed. Data not written to the database.");
 			        }
 			    } else {
 			        //console.log("One or more variables are null or empty. Data not written to the database.");
