--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 			var latitude;
 			var longitude;
 			let speed;
-			var distEachOther = null;
+			var distEachOther = 0;
 
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
